--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -22,3 +22,13 @@ h2.subtitle {
 body {
   font-family: "Jost", sans-serif;
 }
+
+p.prompt {
+  border: thin solid black;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 10px;
+  width: 1100px;
+  text-align: center;
+  padding: 10px 20px 10px 20px;
+}
