--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -1,6 +1,6 @@
 %h1{:class => "title"} The Erotic Corpse story so far
 
-%p
+%p{:class => "prompt"}
   - @story.each do |sentence|
     - if sentence[:reported]
       %span{style: 'text-decoration: line-through;'}
