--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -41,6 +41,16 @@ p.prompt {
   font-weight: bold;
 }
 
+p.story {
+  border: thin solid black;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 10px;
+  width: 1100px;
+  text-align: center;
+  padding: 10px 20px 10px 20px;
+}
+
 p.prompt-question {
   text-align: center;
   margin-right: -925px;
