--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -60,7 +60,7 @@ p.story {
 
 p.prompt-question {
   text-align: center;
-  margin-right: -925px;
+  margin-left: 925px;
   font-style: italic;
   font-size: 12px;
   color: gray;
@@ -94,7 +94,7 @@ button#prompt_report {
 p.char-counter {
   text-align: center;
   margin-top: 5px;
-  margin-right: -750px;
+  margin-left: 750px;
   margin-bottom: 0px;
 }
 
