--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -30,6 +30,10 @@ div.deli-counter {
   margin-top: 50px;
 }
 
+audio {
+  width: 300px;
+}
+
 p.instructions {
   padding: 20px 0px 15px 0px;
   text-align: center;
