Switch to fixed

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -107,7 +107,7 @@ p.char-counter {
 
 div.credits {
   text-align: right;
-  position: relative;
+  position: fixed;
   bottom: 0;
   right: 10px;
 }
