Add it and see what happens?

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -105,6 +105,13 @@ p.char-counter {
   margin-bottom: 0px;
 }
 
+p.audio-player {
+  text-align: center;
+  position: relative;
+  bottom: 0;
+  right: 10px;
+}
+
 div.credits {
   text-align: right;
   position: fixed;
