--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -105,11 +105,8 @@ p.char-counter {
   margin-bottom: 0px;
 }
 
-p.audio-player {
-  text-align: center;
-  position: relative;
-  bottom: 0;
-  right: 10px;
+audio {
+  width: 300px;
 }
 
 div.credits {
