--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -30,6 +30,11 @@ div.deli-counter {
   margin-top: 50px;
 }
 
+div.audio-player {
+  padding-top: 15px;
+  text-align: center;
+}
+
 audio {
   width: 300px;
 }
@@ -103,6 +108,10 @@ p.char-counter {
   margin-top: 5px;
   margin-left: 750px;
   margin-bottom: 0px;
+}
+
+audio {
+  width: 300px;
 }
 
 div.credits {
