--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -117,8 +117,8 @@ audio {
 div.credits {
   text-align: right;
   position: fixed;
-  bottom: 0;
-  right: 10px;
+  bottom: 20px;
+  right: 20px;
 }
 
 p.credit {
