--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -23,6 +23,10 @@ body {
   font-family: 'Jost', sans-serif;
   color: whitesmoke;
   background-color: #545454;
+  font-size: 1.2rem;
+  @media only screen and (min-width: 1140px) {
+    font-size: 1rem;
+  }
 }
 
 div.deli-counter {
@@ -42,17 +46,31 @@ audio {
 p.instructions {
   padding: 20px 0px 15px 0px;
   text-align: center;
-  width: 1100px;
-  margin-left: auto;
-  margin-right: auto;
+  width: 80%;
+  @media only screen and (min-width: 1140px) {
+    width: 1100px;
+  }
+  margin-left: 10%;
+  margin-right: 10%;
+  @media only screen and (min-width: 1140px) {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 p.prompt {
   border: thin solid whitesmoke;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 10%;
+  margin-right: 10%;
+  @media only screen and (min-width: 1140px) {
+    margin-left: auto;
+    margin-right: auto;
+  }
   border-radius: 10px;
-  width: 1100px;
+  width: 80%;
+  @media only screen and (min-width: 1140px) {
+    width: 1100px;
+  }
   text-align: center;
   padding: 10px 20px 10px 20px;
   font-size: 25px;
@@ -61,46 +79,65 @@ p.prompt {
 
 p.story {
   border: thin solid black;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 10%;
+  margin-right: 10%;
+  @media only screen and (min-width: 1140px) {
+    margin-left: auto;
+    margin-right: auto;
+  }
   margin-bottom: 143px;
   border-radius: 10px;
-  width: 1100px;
+  @media only screen and (min-width: 1140px) {
+    width: 1100px;
+  }
   text-align: center;
   padding: 10px 20px 10px 20px;
 }
 
 p.prompt-question {
   text-align: center;
-  margin-left: 925px;
+  float: right;
+  margin-right: 10%;
+  @media only screen and (min-width: 1140px) {
+    float: none;
+    margin-left: 925px;
+  }
   font-style: italic;
   font-size: 12px;
   color: gray;
 }
 
 div.time {
-  text-align: center;
-  margin-left: -760px;
-  margin-top: -18px;
+  margin-left: 10%;
+  @media only screen and (min-width: 1140px) {
+    text-align: center;
+    margin-left: -760px;
+    margin-top: -18px;
+  }
 }
 
 textarea.form-control {
-  width: 800px;
-  margin-left: auto;
-  margin-right: auto;
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  @media only screen and (min-width: 1140px) {
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 div.prompt-buttons {
-  text-align: center;
   margin-top: -20px;
-  margin-left: -635px;
+  margin-left: 10%;
+  @media only screen and (min-width: 1140px) {
+    text-align: center;
+    margin-left: -635px;
+  }
 }
 
 button#prompt_submit {
   margin-right: 10px;
-}
-
-button#prompt_report {
 }
 
 p.char-counter {
