--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -47,30 +47,16 @@ p.instructions {
   padding: 20px 0px 15px 0px;
   text-align: center;
   width: 80%;
-  @media only screen and (min-width: 1140px) {
-    width: 1100px;
-  }
   margin-left: 10%;
   margin-right: 10%;
-  @media only screen and (min-width: 1140px) {
-    margin-left: auto;
-    margin-right: auto;
-  }
 }
 
 p.prompt {
   border: thin solid whitesmoke;
   margin-left: 10%;
   margin-right: 10%;
-  @media only screen and (min-width: 1140px) {
-    margin-left: auto;
-    margin-right: auto;
-  }
   border-radius: 10px;
   width: 80%;
-  @media only screen and (min-width: 1140px) {
-    width: 1100px;
-  }
   text-align: center;
   padding: 10px 20px 10px 20px;
   font-size: 25px;
@@ -81,60 +67,34 @@ p.story {
   border: thin solid black;
   margin-left: 10%;
   margin-right: 10%;
-  @media only screen and (min-width: 1140px) {
-    margin-left: auto;
-    margin-right: auto;
-  }
   margin-bottom: 143px;
   border-radius: 10px;
-  @media only screen and (min-width: 1140px) {
-    width: 1100px;
-  }
+  width: 80%;
   text-align: center;
   padding: 10px 20px 10px 20px;
 }
 
 p.prompt-question {
-  float: right;
-  margin-right: 10%;
-  @media only screen and (min-width: 1140px) {
-    text-align: center;
-    float: none;
-    margin-left: 925px;
-  }
+  margin-right: 15%;
+  margin-bottom: 0px;
   font-style: italic;
   font-size: 12px;
   color: gray;
 }
 
 div.time {
-  margin-left: 10%;
-  @media only screen and (min-width: 1140px) {
-    text-align: center;
-    margin-left: -760px;
-    margin-top: -18px;
-  }
+  margin-left: 15%;
 }
 
 textarea.form-control {
-  width: 80%;
-  margin-left: 10%;
-  margin-right: 10%;
-  @media only screen and (min-width: 1140px) {
-    width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+  width: 70%;
+  margin-left: 15%;
+  margin-right: 15%;
 }
 
 div.prompt-buttons {
   margin-top: 10px;
-  margin-left: 10%;
-  @media only screen and (min-width: 1140px) {
-    margin-top: -20px;
-    text-align: center;
-    margin-left: -635px;
-  }
+  margin-left: 15%;
 }
 
 button#prompt_submit {
@@ -144,12 +104,7 @@ button#prompt_submit {
 p.char-counter {
   margin-top: 5px;
   float: right;
-  margin-right: 10%;
-  @media only screen and (min-width: 1140px) {
-    text-align: center;
-    float: none;
-    margin-left: 925px;
-  }
+  margin-right: 15%;
   margin-bottom: 0px;
 }
 
