--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -77,6 +77,7 @@ p.story {
 p.prompt-question {
   margin-right: 15%;
   margin-bottom: 0px;
+  float: right;
   font-style: italic;
   font-size: 12px;
   color: gray;
